[workspace]
resolver = "2"
members = [
    "crates/steward-core",
    "crates/steward-cli",
    "crates/steward-runtime",
    "bindings/core",
    "bindings/python",
    "bindings/node",
    "bindings/julia",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Patrick Peña - Agenisea AI <patrick@agenisea.ai>"]
license = "MIT"
repository = "https://github.com/agenisea/steward"
documentation = "https://docs.rs/steward"
keywords = ["stewardship", "governance", "ai", "evaluation", "contracts"]
categories = ["development-tools", "config"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9.34"

# Schema validation
jsonschema = "0.26"

# Error handling
thiserror = "2.0"
anyhow = "1.0.95"

# Async runtime (for future LLM calls)
tokio = { version = "1.42", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Date/time
chrono = { version = "0.4.39", features = ["serde"] }

# Regex for pattern matching
regex = "1.11"
lazy_static = "1.5"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Testing
proptest = "1.6"

# Internal crates
steward-core = { path = "crates/steward-core" }
steward-runtime = { path = "crates/steward-runtime" }
steward-bindings-core = { path = "bindings/core" }
