[package]
name = "steward-julia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Julia bindings for Steward - Deterministic stewardship contract evaluation"
repository.workspace = true
keywords = ["stewardship", "governance", "ai", "julia", "jlrs"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
steward-core = { path = "../../crates/steward-core" }
steward-bindings-core = { path = "../core" }
serde_json = { workspace = true }
# jlrs = { version = "0.22", features = ["ccall"] }  # Uncomment when ready
